--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,10 +14,6 @@
   background-color: #828282;
 }
 
-.sbs {
-  margin-top: 4px;
-}
-
 .h4 {
   font-size: 20px;
   font-weight: bold;
@@ -35,6 +31,7 @@
   line-height: 130%;
   border-radius: 8px;
   padding: 12.5px 24px;
+  margin-top: 32px;
 }
 
 .download {
@@ -46,6 +43,15 @@
   line-height: 130%;
   border-radius: 8px;
   padding: 12.5px 24px;
+  margin-top: 32px;
+}
+
+.sbs {
+  margin-top: 4px;
+}
+
+.marginBottom {
+  margin-bottom: 16px;
 }
 
 @media (min-width: 400px) {
