--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
+::-webkit-scrollbar-track {
+  background: none;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background: #c2c2c2;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #404040;
+}
+
 * {
   font-family: "Pretendard";
 }
@@ -66,4 +84,3 @@
 
 @media (min-width: 400px) {
 }
-
